// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`marqueeRepetition renders 0 1`] = `
Array [
  .c0 {
  marquee-repetition: 0;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-repetition: 0;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-repetition: 0;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-repetition: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeRepetition renders function 1`] = `
Array [
  .c0 {
  marquee-repetition: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-repetition: has;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-repetition: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-repetition: has;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeRepetition renders invalid theme path 1`] = `
Array [
  .c0 {
  marquee-repetition: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-repetition: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-repetition: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-repetition: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeRepetition renders negative number 1`] = `
Array [
  .c0 {
  marquee-repetition: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-repetition: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-repetition: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-repetition: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeRepetition renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  marquee-repetition: July;
}

@media screen and (min-width:November) {
  .c0 {
    marquee-repetition: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-repetition: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-repetition: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee-repetition: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  marquee-repetition: July;
}

@media screen and (min-width:November) {
  .c0 {
    marquee-repetition: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-repetition: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-repetition: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee-repetition: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  marquee-repetition: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    marquee-repetition: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-repetition: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-repetition: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee-repetition: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  marquee-repetition: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    marquee-repetition: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-repetition: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-repetition: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee-repetition: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeRepetition renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    marquee-repetition: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-repetition: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-repetition: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee-repetition: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    marquee-repetition: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-repetition: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-repetition: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee-repetition: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    marquee-repetition: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-repetition: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-repetition: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee-repetition: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    marquee-repetition: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-repetition: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-repetition: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee-repetition: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeRepetition renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  marquee-repetition: July;
}

@media May {
  .c0 {
    marquee-repetition: August;
  }
}

@media April {
  .c0 {
    marquee-repetition: September;
  }
}

@media January {
  .c0 {
    marquee-repetition: November;
  }
}

@media April {
  .c0 {
    marquee-repetition: August;
  }
}

@media June {
  .c0 {
    marquee-repetition: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  marquee-repetition: July;
}

@media May {
  .c0 {
    marquee-repetition: August;
  }
}

@media April {
  .c0 {
    marquee-repetition: September;
  }
}

@media January {
  .c0 {
    marquee-repetition: November;
  }
}

@media April {
  .c0 {
    marquee-repetition: August;
  }
}

@media June {
  .c0 {
    marquee-repetition: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  marquee-repetition: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    marquee-repetition: November;
  }
}

@media April {
  .c0 {
    marquee-repetition: January;
  }
}

@media January {
  .c0 {
    marquee-repetition: December;
  }
}

@media April {
  .c0 {
    marquee-repetition: April;
  }
}

@media June {
  .c0 {
    marquee-repetition: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  marquee-repetition: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    marquee-repetition: November;
  }
}

@media April {
  .c0 {
    marquee-repetition: January;
  }
}

@media January {
  .c0 {
    marquee-repetition: December;
  }
}

@media April {
  .c0 {
    marquee-repetition: April;
  }
}

@media June {
  .c0 {
    marquee-repetition: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeRepetition renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    marquee-repetition: July;
  }
}

@media April {
  .c0 {
    marquee-repetition: August;
  }
}

@media January {
  .c0 {
    marquee-repetition: September;
  }
}

@media April {
  .c0 {
    marquee-repetition: November;
  }
}

@media June {
  .c0 {
    marquee-repetition: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    marquee-repetition: July;
  }
}

@media April {
  .c0 {
    marquee-repetition: August;
  }
}

@media January {
  .c0 {
    marquee-repetition: September;
  }
}

@media April {
  .c0 {
    marquee-repetition: November;
  }
}

@media June {
  .c0 {
    marquee-repetition: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    marquee-repetition: January;
  }
}

@media April {
  .c0 {
    marquee-repetition: December;
  }
}

@media January {
  .c0 {
    marquee-repetition: April;
  }
}

@media April {
  .c0 {
    marquee-repetition: May;
  }
}

@media June {
  .c0 {
    marquee-repetition: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    marquee-repetition: January;
  }
}

@media April {
  .c0 {
    marquee-repetition: December;
  }
}

@media January {
  .c0 {
    marquee-repetition: April;
  }
}

@media April {
  .c0 {
    marquee-repetition: May;
  }
}

@media June {
  .c0 {
    marquee-repetition: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeRepetition renders postitive number 1`] = `
Array [
  .c0 {
  marquee-repetition: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-repetition: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-repetition: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-repetition: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeRepetition renders string 1`] = `
Array [
  .c0 {
  marquee-repetition: July;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-repetition: July;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-repetition: June;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-repetition: June;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeRepetition renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`marqueeRepetition renders valid theme path 1`] = `
Array [
  .c0 {
  marquee-repetition: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-repetition: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-repetition: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-repetition: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
